// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser parse() doesnt parse HTML when escaped 1`] = `
Array [
  "<main role=\\"main\\">",
  <Element
    selfClose={true}
    tagName="br"
  />,
  "  Main content",
  <Element
    selfClose={true}
    tagName="br"
  />,
  "  <div>",
  <Element
    selfClose={true}
    tagName="br"
  />,
  "    <a href=\\"#\\">Link</a>",
  <Element
    selfClose={true}
    tagName="br"
  />,
  "    <span class=\\"foo\\">String</span>",
  <Element
    selfClose={true}
    tagName="br"
  />,
  "  </div>",
  <Element
    selfClose={true}
    tagName="br"
  />,
  "</main>",
  <Element
    selfClose={true}
    tagName="br"
  />,
  "<aside id=\\"sidebar\\">",
  <Element
    selfClose={true}
    tagName="br"
  />,
  "  Sidebar content",
  <Element
    selfClose={true}
    tagName="br"
  />,
  "</aside>",
]
`;

exports[`Parser parse() parses the entire document starting from the body 1`] = `
Array [
  <Element
    attributes={
      Object {
        "role": "main",
      }
    }
    tagName="main"
  >
    
  Main content
  
    <Element
      tagName="div"
    >
      
    
      <Element
        attributes={
          Object {
            "href": "#",
          }
        }
        tagName="a"
      >
        Link
      </Element>
      
    
      <Element
        attributes={
          Object {
            "className": "foo",
          }
        }
        tagName="span"
      >
        String
      </Element>
      
  
    </Element>
    

  </Element>,
  "
",
  <Element
    attributes={
      Object {
        "id": "sidebar",
      }
    }
    tagName="aside"
  >
    
  Sidebar content

  </Element>,
]
`;

exports[`Parser parseNode() uses parent config for unsupported elements 1`] = `
Array [
  <Element
    attributes={
      Object {
        "target": "_blank",
      }
    }
    tagName="a"
  >
    Link
  </Element>,
]
`;
